# Trade_data_service

./: .env.example  README.md  config.py  data_extractor.py  pyproject.toml  requirements.txt  trade_data.py
data/: H5.json  countries_codes.csv
src/: database.py  extractor.py
src/utils/: file_handlers.py  fuzzy_search.py  validators.py
