[tool.poetry]
name = "trade-data-extractor"
version = "1.0.0"
description = "CLI tool for extracting and decoding trade data from SQLite database"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "trade_extractor"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
python-dateutil = "^2.8.0"
click = "^8.1.0"
rich = "^13.0.0"
typer = "^0.9.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
trade-data = "trade_extractor.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build.backend"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3