[tool.poetry]
name = "trade-data-extractor"
version = "1.0.0"
description = "Tool for extracting and decoding trade data from SQLite database"
authors = ["Samdandrakov Danila <Samandrakovda@gmail.com>"]
readme = "README.md"
packages = [{include = "trade_extractor"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.build.backend"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3